[gd_scene load_steps=55 format=3 uid="uid://cuu5wag8nfj8d"]

[ext_resource type="Texture2D" uid="uid://cx4kmlvhmbumf" path="res://Assets/white_knight.png" id="1_3khqn"]
[ext_resource type="PackedScene" uid="uid://c5xblqofcwad0" path="res://Scenes/board.tscn" id="1_63gbl"]
[ext_resource type="Script" uid="uid://b4oytlhw1b47a" path="res://Scenes/backbutton2.gd" id="1_i1ivh"]
[ext_resource type="Texture2D" uid="uid://cmeyu8h570wfu" path="res://Assets/white_bishop.png" id="2_75nc3"]
[ext_resource type="Texture2D" uid="uid://cdwwp77li7ont" path="res://Assets/white_rook.png" id="3_a7xec"]
[ext_resource type="Texture2D" uid="uid://b4bbjl2efbub5" path="res://Assets/white_queen.png" id="4_2yafp"]
[ext_resource type="Texture2D" uid="uid://dkquu41n2ff54" path="res://Assets/black_knight.png" id="5_cqk1v"]
[ext_resource type="Texture2D" uid="uid://bihjemuj1hawu" path="res://Assets/black_bishop.png" id="6_cavfs"]
[ext_resource type="Texture2D" uid="uid://bjh7idko58sj3" path="res://Assets/black_rook.png" id="7_wianj"]
[ext_resource type="Texture2D" uid="uid://cm4whuwumyrv1" path="res://Assets/black_queen.png" id="8_df1ci"]
[ext_resource type="Script" uid="uid://dlv76wa3073yk" path="res://Scenes/chess_ai.gd" id="10_v8yjp"]
[ext_resource type="FontFile" uid="uid://den0nlkkmkyvl" path="res://Assets/Kurland-Regular.ttf" id="12_5ttvb"]
[ext_resource type="AudioStream" uid="uid://58hy22om874d" path="res://Assets/finish_sound.mp3" id="13_ocgfl"]
[ext_resource type="AudioStream" uid="uid://qge7xd03pd4p" path="res://Assets/move_sound.mp3" id="13_v2te1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vp5if"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s8r64"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_djh8o"]
texture = ExtResource("1_3khqn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xu268"]
texture = ExtResource("1_3khqn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kgqrv"]
texture = ExtResource("1_3khqn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r62nm"]
texture = ExtResource("2_75nc3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dj85t"]
texture = ExtResource("2_75nc3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rn6hk"]
texture = ExtResource("2_75nc3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xahkn"]
texture = ExtResource("3_a7xec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oeqcr"]
texture = ExtResource("3_a7xec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6730i"]
texture = ExtResource("3_a7xec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jh1bq"]
texture = ExtResource("4_2yafp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mj4nn"]
texture = ExtResource("4_2yafp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fj2iu"]
texture = ExtResource("4_2yafp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0e7vx"]
texture = ExtResource("5_cqk1v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_krrsb"]
texture = ExtResource("5_cqk1v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5lcsg"]
texture = ExtResource("5_cqk1v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cgwqf"]
texture = ExtResource("6_cavfs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lj782"]
texture = ExtResource("6_cavfs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cnoic"]
texture = ExtResource("6_cavfs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6mk8i"]
texture = ExtResource("7_wianj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cavm8"]
texture = ExtResource("7_wianj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_peht4"]
texture = ExtResource("7_wianj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uj42o"]
texture = ExtResource("8_df1ci")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_etk7k"]
texture = ExtResource("8_df1ci")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vgg4r"]
texture = ExtResource("8_df1ci")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ttvb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2te1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ocgfl"]
texture = ExtResource("5_cqk1v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gfckl"]
texture = ExtResource("5_cqk1v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_40nf2"]
texture = ExtResource("5_cqk1v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u5r0k"]
texture = ExtResource("2_75nc3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6d26h"]
texture = ExtResource("2_75nc3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_llwf1"]
texture = ExtResource("2_75nc3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g7j7b"]
texture = ExtResource("7_wianj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yspgp"]
texture = ExtResource("7_wianj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gu8mm"]
texture = ExtResource("7_wianj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rslve"]
texture = ExtResource("4_2yafp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f2obm"]
texture = ExtResource("4_2yafp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m4mg5"]
texture = ExtResource("4_2yafp")

[node name="Main" type="Node2D"]
script = ExtResource("1_i1ivh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(72, -72)
zoom = Vector2(4, 4)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="white_pieces" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="2" type="Button" parent="CanvasLayer/white_pieces" groups=["white_pieces"]]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_djh8o")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xu268")
theme_override_styles/normal = SubResource("StyleBoxTexture_kgqrv")

[node name="3" type="Button" parent="CanvasLayer/white_pieces" groups=["white_pieces"]]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_r62nm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dj85t")
theme_override_styles/normal = SubResource("StyleBoxTexture_rn6hk")

[node name="4" type="Button" parent="CanvasLayer/white_pieces" groups=["white_pieces"]]
layout_mode = 0
offset_left = 200.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_xahkn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_oeqcr")
theme_override_styles/normal = SubResource("StyleBoxTexture_6730i")

[node name="5" type="Button" parent="CanvasLayer/white_pieces" groups=["white_pieces"]]
layout_mode = 0
offset_left = 300.0
offset_right = 400.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_jh1bq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mj4nn")
theme_override_styles/normal = SubResource("StyleBoxTexture_fj2iu")

[node name="black_pieces" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="2" type="Button" parent="CanvasLayer/black_pieces" groups=["black_pieces"]]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_0e7vx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_krrsb")
theme_override_styles/normal = SubResource("StyleBoxTexture_5lcsg")

[node name="3" type="Button" parent="CanvasLayer/black_pieces" groups=["black_pieces"]]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_cgwqf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lj782")
theme_override_styles/normal = SubResource("StyleBoxTexture_cnoic")

[node name="4" type="Button" parent="CanvasLayer/black_pieces" groups=["black_pieces"]]
layout_mode = 0
offset_left = 200.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_6mk8i")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cavm8")
theme_override_styles/normal = SubResource("StyleBoxTexture_peht4")

[node name="5" type="Button" parent="CanvasLayer/black_pieces" groups=["black_pieces"]]
layout_mode = 0
offset_left = 300.0
offset_right = 400.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vp5if")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s8r64")
theme_override_styles/hover = SubResource("StyleBoxTexture_uj42o")
theme_override_styles/pressed = SubResource("StyleBoxTexture_etk7k")
theme_override_styles/normal = SubResource("StyleBoxTexture_vgg4r")

[node name="black_and_white_pieces" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="2" type="Button" parent="CanvasLayer/black_and_white_pieces" groups=["black_pieces"]]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ttvb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2te1")
theme_override_styles/hover = SubResource("StyleBoxTexture_ocgfl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gfckl")
theme_override_styles/normal = SubResource("StyleBoxTexture_40nf2")

[node name="3" type="Button" parent="CanvasLayer/black_and_white_pieces" groups=["white_pieces"]]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ttvb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2te1")
theme_override_styles/hover = SubResource("StyleBoxTexture_u5r0k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6d26h")
theme_override_styles/normal = SubResource("StyleBoxTexture_llwf1")

[node name="4" type="Button" parent="CanvasLayer/black_and_white_pieces" groups=["black_pieces"]]
layout_mode = 0
offset_left = 200.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ttvb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2te1")
theme_override_styles/hover = SubResource("StyleBoxTexture_g7j7b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yspgp")
theme_override_styles/normal = SubResource("StyleBoxTexture_gu8mm")

[node name="5" type="Button" parent="CanvasLayer/black_and_white_pieces" groups=["white_pieces"]]
layout_mode = 0
offset_left = 300.0
offset_right = 400.0
offset_bottom = 100.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ttvb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2te1")
theme_override_styles/hover = SubResource("StyleBoxTexture_rslve")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f2obm")
theme_override_styles/normal = SubResource("StyleBoxTexture_m4mg5")

[node name="Board" parent="." instance=ExtResource("1_63gbl")]
script = ExtResource("10_v8yjp")

[node name="MoveSound" type="AudioStreamPlayer2D" parent="Board"]
position = Vector2(-72, 72)
stream = ExtResource("13_v2te1")

[node name="EndSound" type="AudioStreamPlayer2D" parent="Board"]
stream = ExtResource("13_ocgfl")

[node name="BackButton" type="Button" parent="."]
texture_filter = 2
offset_left = -70.0
offset_top = -152.0
offset_right = -43.0
offset_bottom = -123.0
theme_override_fonts/font = ExtResource("12_5ttvb")
theme_override_font_sizes/font_size = 15
text = "❮
"
flat = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
